Bug 83558 - Shortcuts sometimes not displayed in toolbar
Summary: Shortcuts sometimes not displayed in toolbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-06 12:51 UTC by Samuel Mehrbrodt
Modified: 2014-09-24 20:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2014-09-06 12:51:45 UTC
1. Create a new text document
2. The tooltip for the Save button is "Save (Ctrl+S)"
3. Modify the document
4. The tooltip for the Save button is "Save" (Keyboard shortcut missing).
Comment 1 Julien Nabet 2014-09-06 20:54:23 UTC
On pc Debian x86-64 with master sources updated some days ago, I could reproduce this.
Comment 2 Julien Nabet 2014-09-06 21:09:24 UTC
Keyid language gives:
1) Save with tooltip: CKWkk
https://translations.documentfoundation.org/fr/translate/#search=CKWkk&sfields=source,target,notes
GenericCommands.xcu ..GenericCommands.UserInterface.Commands..uno:Save Label value.text 

2) Save without tooltip: HqLev
https://translations.documentfoundation.org/fr/translate/#search=HqLev&sfields=source,target,not
doc.src STR_SAVEDOC string.text

Would it be on purpose or should the second one be removed and replaced by the first? (perhaps not trivial)

Caolan: thought you might be interested in this one.
Comment 3 Samuel Mehrbrodt 2014-09-06 21:11:19 UTC
@Julien, I don't understand what you want to say, but I have proposed a patch for this in Gerrit: https://gerrit.libreoffice.org/#/c/11306/
Review appreciated.
Comment 4 Julien Nabet 2014-09-06 21:17:01 UTC
I won't be able to do the review but just to explain my comment.

KeyId is a specific language which allows to display English entry + hashcode.
From this hashcode, you can use Pootle server to know where the hashcode (and therefore the entry) is declared.
Then you can try to unwind until the part of the code which may interest you.
Comment 5 Julien Nabet 2014-09-06 21:18:15 UTC
s/comment./comment:/ (I should have re read my comment before sending it :-))
Comment 6 Commit Notification 2014-09-24 20:31:51 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fb8724f9834dbc07b741eeed31b31347bc0c2a1

fdo#83558 Don't change toolbar tooltip on state change



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.