fdo#83558 Don't change toolbar tooltip on state change

Also removed EraseAllMnemonicChars since that method is called later by SetItemText

Change-Id: I10139d437290ccfed6a8a15e8e5ce501e15c2560
Reviewed-on: https://gerrit.libreoffice.org/11306
Reviewed-by: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
Tested-by: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>